aded new page list blogs

--- a/add-blog/add-blog.html
+++ b/add-blog/add-blog.html
@@ -1,99 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row ">
-        <div class="mt-4 col">
-          <h1>Add Blog Page</h1>
-        </div>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
 
-      <div class="row">
-        <form class="row g-3 needs-validation add-blog-form" novalidate onsubmit="validate(event)">
-          <div class="row">
-            <div class="col-md-6">
-              <label for="title" class="form-label h4">Blog Title</label>
-              <input
-                type="text"
-                class="form-control"
-                id="title"
-                name="title"
-                required
-                minlength="3"
-              />
-              <div class="invalid-feedback">
-                Invalid title
-              </div>
-              <div class="valid-feedback">
-                Looks good!
-              </div>
-            </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+</head>
 
-
-            <div class="col-md-4">
-              <label for="authorName" class="form-label h4">Author name</label>
-              <input
-                type="text"
-                class="form-control"
-                id="authorName"
-                name="authorName"
-                required
-                minlength="5"
-              />
-              <div class="invalid-feedback">
-                Invalid Author name, name was empty or les than 5 characters. 
-              </div>
-              <div class="valid-feedback">
-                Looks good!
-              </div>
-            </div>
-          </div>
-
-          <div class="row mt-4">
-            <div class="col-md-10">
-              <label for="content" class="form-label h4">Blog Content</label>
-              <textarea
-                class="form-control"
-                id="content"
-                name="content"
-                minlength="15"
-                rows="8"
-                required
-              ></textarea>
-              <div class="invalid-feedback">
-                Invalid content, content was too short or empty
-              </div>
-              <div class="valid-feedback">
-                Looks good!
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col-12 d-flex">
-            <button class="btn btn-success" type="submit">Add Blog</button>
-          </div>
-        </form>
+<body>
+  <div class="container">
+    <div class="row ">
+      <div class="mt-4 col">
+        <h1>Add Blog Page</h1>
       </div>
     </div>
-    <script src="js/add-blog.js"></script>
-  </body>
+
+    <div class="row">
+      <form class="row g-3 needs-validation add-blog-form" novalidate onsubmit="validate(event)">
+        <div class="row">
+          <div class="col-md-6">
+            <label for="title" class="form-label h4">Blog Title</label>
+            <input type="text" class="form-control" id="title" name="title" required minlength="3" />
+            <div class="invalid-feedback">
+              Invalid title
+            </div>
+            <div class="valid-feedback">
+              Looks good!
+            </div>
+          </div>
+
+
+          <div class="col-md-4">
+            <label for="authorName" class="form-label h4">Author name</label>
+            <input type="text" class="form-control" id="authorName" name="authorName" required minlength="5" />
+            <div class="invalid-feedback">
+              Invalid Author name, name was empty or les than 5 characters.
+            </div>
+            <div class="valid-feedback">
+              Looks good!
+            </div>
+          </div>
+        </div>
+
+        <div class="row mt-4">
+          <div class="col-md-10">
+            <label for="content" class="form-label h4">Blog Content</label>
+            <textarea class="form-control" id="content" name="content" minlength="15" rows="8" required></textarea>
+            <div class="invalid-feedback">
+              Invalid content, content was too short or empty
+            </div>
+            <div class="valid-feedback">
+              Looks good!
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-12 d-flex">
+          <button class="btn btn-success" type="submit">Add Blog</button>
+        </div>
+      </form>
+    </div>
+  </div>
+  <script src="js/add-blog.js"></script>
+</body>
+
 </html>
