added * listing blog page * BlogPost Component

--- a/add-blog/list-blogs.html
+++ b/add-blog/list-blogs.html
@@ -16,9 +16,15 @@
 
 <body>
     <div class="container">
+        <div class="h1 mt-4">Blog list</div>
+        <div class="row blogs mt-4">
+        </div>
 
+        <div class="row mt-4">
+            <a href="./add-blog.html" class="btn btn-success col-md-2">Add a new Blog</a>
+        </div>
     </div>
-    <script src="js/list-blog.js"></script>
+    <script type="module" src="js/list-blog.js"></script>
 </body>
 
 </html>
