added * delete blog * edite blog

--- a/add-blog/edit-blog.html
+++ b/add-blog/edit-blog.html
@@ -24,7 +24,7 @@
 
     <div class="row">
       <input type="hidden" name="id" id="id">
-      <form class="row g-3 needs-validation add-blog-form" novalidate method="post">
+      <form class="row g-3 needs-validation edit-blog-form" method="get" novalidate>
         <div class="row">
           <div class="col-md-6">
             <label for="title" class="form-label h4">Blog Title</label>
@@ -65,12 +65,12 @@
 
 
         <div class="col-12 d-flex">
-          <button class="btn btn-success" type="submit">Add Blog</button>
+          <button class="btn btn-success" type="submit">Edit Blog</button>
         </div>
       </form>
     </div>
   </div>
-  <script type="module" src="js/add-blog.js"></script>
+  <script type="module" src="js/edit-blog.js"></script>
 </body>
 
 </html>
