--- a/add-blog/list-blogs.html
+++ b/add-blog/list-blogs.html
@@ -17,6 +17,7 @@
 <body>
     <div class="container">
         <div class="h1 mt-4">Blog list</div>
+        <div class="empty-list h4 mt-4"></div>
         <div class="row blogs mt-4">
         </div>
 
